compiler/lume_typech/src/tests/snapshots/lume_typech__tests__check__typech_return_value_inline_incomp.snap
---
source: compiler/lume_typech/src/tests/check.rs
description: "fn foo() -> Int32 {\n        return true;\n    }"
---
× error[LM4001]: mismatched types
   ╭───────────
 1 │ fn foo() -> Int32 {
 2 │         return true;
   │                ^^^^ expected type Int32, but found type Boolean...
 3 │     }
   ∶ 
 1 │ fn foo() -> Int32 {
   │             ^^^^^ ...because of type defined here
 2 │         return true;
   ╰──
